--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,3 +1,12 @@
+<h1>投稿一覧</h1>
+<% @books.each do |book| %>
+  <p>タイトル</p>
+  <span><%= book.title %></span>
+<% end %>
+
+
+
+
 <h1>新規投稿</h1>
 <%= form_with model: @book, url: '/books', method: :post do |f| %>
 
