--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,7 +1,9 @@
 <h1>投稿一覧</h1>
 <% @books.each do |book| %>
   <p>タイトル</p>
-  <span><%= book.title %></span>
+  <span>
+    <%= link_to book.title, book_path(book.id) %>
+  </span>
 <% end %>
 
 
