--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,7 +2,7 @@
   <%= flash[:notice] %>
 </div>
 
-<h1>編集画面</h1>
+<h1>Editing Book</h1>
 
 <!------------------------------------------------------------------------->
 
@@ -19,12 +19,18 @@
 
 <%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
 
-  <h4>タイトル</h4>
+  <h4>Title</h4>
   <%= f.text_field :title %>
 
-  <h4>感想</h4>
+  <h4>Body</h4>
   <%= f.text_area :body %>
 
-  <%= f.submit '保存' %>
+  <%= f.submit 'Update Book' %>
 
 <% end %>
+
+<span>
+<%= link_to "Show", book_path(@book.id) %>
+|
+<%= link_to "Back", '/books' %>
+</span>
