--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,19 +2,31 @@
   <%= flash[:notice] %>
 </div>
 
-<h1>投稿一覧</h1>
-<% @books.each do |book| %>
-  <p>タイトル</p>
-  <span>
-    <%= link_to book.title, book_path(book.id) %>
-  </span>
-<% end %>
+<h1>Books</h1>
+<!----------------------------------------------------------------------->
 
+<table>
+  <tr>
+    <th>Title</th>
+    <th>Body</th>
+  </tr>
+
+  <% @books.each do |book| %>
+    <tr>
+      <th><%= book.title %></th>
+      <th><%= book.body %></th>
+      <th><%= link_to "Show", book_path(book.id) %></th>
+      <th><%= link_to "Edit", edit_book_path(book.id) %></th>
+      <th><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></th>
+    </tr>
+  <% end %>
+
+</table>
 
 <!--=====================================================================-->
 
 
-<h1>新規投稿</h1>
+<h1>New book</h1>
 
 <!-------------------------------------------------------------------------->
 
@@ -31,13 +43,13 @@
 
 <%= form_with model: @book, url: '/books', method: :post do |f| %>
 
-  <h4>タイトル</h4>
+  <h4>Title</h4>
   <%= f.text_field :title %>
 
-  <h4>感想</h4>
+  <h4>Body</h4>
   <%= f.text_area :body %>
 
-  <%= f.submit '投稿' %>
+  <%= f.submit 'Create Book' %>
 
 <% end %>
 
