--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,11 +3,11 @@
 </div>
 
 
-<h2>タイトル</h2>
-<p><%= @book.title %></p>
+<p>Title: <%= @book.title %></p>
+<p>Body: <%= @book.body %></p>
 
-<h2>感想</h2>
-<p><%= @book.body %></p>
-
-<%= link_to "編集", edit_book_path(@book.id) %>
-<%= link_to "削除", book_path(@book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
+<span>
+<%= link_to "Edit", edit_book_path(@book.id) %>
+|
+<%= link_to "Back", '/books' %>
+</span>
