--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,13 @@
-<h1>ようこそ Bookersへ！</h1>
-<p>
-  Bookers では、さまざまな書籍に関するあなたの意見や<br>
-  印象を共有し交換することができます。
-</p>
+<div class="top-header">
+  ようこそ Bookersへ！
+</div>
 
-<%= link_to "start", '/books' %>
+<div class="top-body">
+  <p class="top-text">
+    <span>Bookers</span> では、さまざまな書籍に関するあなたの意見や<br>
+    印象を共有し交換することができます。
+  </p>
+  <a class="top-start">
+    <%= link_to "start", '/books' %>
+  </a>
+</div>
