--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,10 +14,20 @@
  *= require_self
  */
 
+/*================================================================*/
+
 * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
+}
+
+a:link {
+   color: #080808;
+}
+
+a:visited {
+   color: #c0c0c0;
 }
 
 a:hover {
@@ -25,8 +35,10 @@ a:hover {
    background-color: #000;
 }
 
+/*-------------------------------------------------------------*/
+
 .top-header {
-   margin: 20px 30px 10px 30px;
+   margin: 20px 30px 5px 30px;
    font-size: 20px;
    font-weight: bold;
 }
@@ -47,5 +59,52 @@ a:hover {
 .top-start {
    line-height: 50px;
 }
+
+/*-----------------------------------------------------------*/
+
+.index-header {
+   margin: 15px 25px 0 30px;
+   font-size: 20px;
+   font-weight: bold;
+}
+
+.list-header span {
+   margin: 0 100px;
+   font-size: 10px;
+   font-weight: bold;
+}
+
+.list {
+   margin-left: 25px;
+   border-spacing: 15px 10px;
+   font-size: 10px;
+}
+
+th {
+   font-weight: normal;
+}
+
+/*-----------------------------------------------------------------*/
+
+.create-header {
+   margin-left: 25px;
+   font-size: 15px;
+   font-weight: bold;
+}
+
+.create {
+   margin-left: 25px;
+}
+
+.create-title {
+   margin-top: 10px;
+   font-size: 10px;
+}
+
+.create-body {
+   margin-top: 5px;
+   font-size: 10px;
+}
+
 
 
