--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,6 @@
-<div>
-  <%= flash[:notice] %>
-</div>
+<!--<div>-->
+  <!--%= flash[:notice] %>-->
+<!--</div>-->
 
 <div class="index-header">
   Books
