--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,13 +1,16 @@
-<div>
-    <%= flash[:notice] %>
+<!--<div>-->
+    <!--%= flash[:notice] %>-->
+<!--</div>-->
+
+<div class="show">
+  <p><b>Title: </b><%= @book.title %></p>
+  <p><b>Body: </b><%= @book.body %></p>
 </div>
 
-
-<p>Title: <%= @book.title %></p>
-<p>Body: <%= @book.body %></p>
-
-<span>
-<%= link_to "Edit", edit_book_path(@book.id) %>
-|
-<%= link_to "Back", '/books' %>
-</span>
+<div class="show-link">
+  <span>
+    <%= link_to "Edit", edit_book_path(@book.id) %>
+    |
+    <%= link_to "Back", '/books' %>
+  </span>
+</div>
