edit_page completed

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
  *= require_self
  */
 
-/*================================================================*/
+/*==========================All Page====================================*/
 
 * {
    margin: 0;
@@ -48,7 +48,7 @@ a:hover {
    background-color: #000;
 }
 
-/*-------------------------------------------------------------*/
+/*---------------------------Top Page-------------------------------*/
 
 .top-header {
    margin: 20px 30px 5px 30px;
@@ -73,7 +73,7 @@ a:hover {
    line-height: 50px;
 }
 
-/*-----------------------------------------------------------*/
+/*----------------------------Index & Create Page-------------------------------*/
 
 .index-header {
    margin: 15px 25px 0 30px;
@@ -97,7 +97,6 @@ th {
    font-weight: normal;
 }
 
-/*-----------------------------------------------------------------*/
 
 .create-header {
    margin-left: 25px;
@@ -119,7 +118,7 @@ th {
    font-size: 10px;
 }
 
-/*--------------------------------------------------------*/
+/*--------------------------Show Page------------------------------*/
 
 .show p {
    margin: 25px 55px;
@@ -128,5 +127,31 @@ th {
 
 .show-link span {
    margin-left: 25px;
+   font-size: 10px;
+}
+
+/*------------------------------Edit Page-------------------------------------------*/
+
+.edit-header {
+   margin: 20px 0 0 25px;
+   font-size: 20px;
+   font-weight: bold;
+}
+
+.edit {
+   margin-left: 25px;
+}
+
+.edit-title {
+   margin-top: 5px;
+   font-size: 10px;
+}
+
+.edit-body {
+   margin-top: 5px;
+   font-size: 10px;
+}
+
+.edit span {
    font-size: 10px;
 }
