--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,7 +1,3 @@
-<!--<div>-->
-  <!--%= flash[:notice] %>-->
-<!--</div>-->
-
 <div class="edit-header">
   Editing Book
 </div>
@@ -9,36 +5,44 @@
 <!------------------------------------------------------------------------->
 
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
+  <div class="error-box">
+    <p>
+    <% if @book.errors.count == 1 %>
+      <%= @book.errors.count %> error prohibited this book from being saved:
+    <% else %>
+      <%= @book.errors.count %> errors prohibited this book from being saved:
     <% end %>
-  </ul>
+    </p>
+    <ul class="error-box-list">
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
 <% end %>
 
 <!---------------------------------------------------------------------------->
 
 <div class="edit">
 
-<%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
+  <%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
 
-  <div class="edit-title">Title</div>
-  <%= f.text_field :title %>
+    <div class="edit-title">Title</div>
+    <%= f.text_field :title, size: "15x10" %>
 
-  <div class="edit-body">Body</div>
-  <%= f.text_area :body %>
+    <div class="edit-body">Body</div>
+    <%= f.text_area :body %>
 
-  <div class="edit-button">
-    <%= f.submit 'Update Book' %>
-  </div>
+    <div class="edit-button">
+      <%= f.submit 'Update Book' %>
+    </div>
 
-<% end %>
+  <% end %>
 
-<span>
-<%= link_to "Show", book_path(@book.id) %>
-|
-<%= link_to "Back", '/books' %>
-</span>
+  <span>
+  <%= link_to "Show", book_path(@book.id) %>
+  |
+  <%= link_to "Back", '/books' %>
+  </span>
 
 </div>
