--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,3 @@
-<!--<div>-->
-  <!--%= flash[:notice] %>-->
-<!--</div>-->
-
 <div class="index-header">
   Books
 </div>
@@ -22,7 +18,6 @@
       <th><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></th>
     </tr>
   <% end %>
-
 </table>
 
 <!--=====================================================================-->
@@ -35,12 +30,20 @@
 <!-------------------------------------------------------------------------->
 
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
+  <div class="error-box">
+    <p>
+    <% if @book.errors.count == 1 %>
+      <%= @book.errors.count %> error prohibited this book from being saved:
+    <% else %>
+      <%= @book.errors.count %> errors prohibited this book from being saved:
     <% end %>
-  </ul>
+    </p>
+    <ul class="error-box-list">
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
 <% end %>
 
 <!------------------------------------------------------------------------------->
